<resources>
    <string name="app_name">Huli</string>
    <string-array name="order_filter">
        <item>All</item>
        <item>working</item>
        <item>done</item>
        <item>out of date</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="date_chose_btn">Chose date</string>
    <string name="time_chose_btn">Chose time</string>
    <string name="add_order_btn">Add order</string>
    <string name="now_order_btn">Now order</string>
    <string name="on_work_btn">Check it</string>
    <string name="order_btn">Order(s)</string>
    <string name="my_info_btn">My info</string>
    <string name="order_manage_btn">Order manage</string>
    <string name="contact_btn">Contact</string>
    <string name="edit_btn">edit</string>
    <string name="delete_btn">delete</string>
    <string name="delete_confirm_hint">Confirm delete?</string>
    <string name="yes_btn">yes</string>
    <string name="no_btn">no</string>
    <string name="add_announcement_btn">Add announcement</string>
    <string name="accept_order_btn">Accept</string>
    <string name="refuse_order_btn">Refuse</string>
    <string name="tool_box_btn">Tool Box</string>
    <string name="my_order_btn">My Order</string>
    <string name="order_market_btn">Order Market</string>
    <string name="log_out_btn">log out</string>
    <string name="log_in_btn">log in</string>
    <string name="modify_btn">Modify</string>
    <string name="verify_btn">Verify</string>
    <string name="change_password_btn">Change password</string>
    <string name="change_phone_btn">Change phone</string>
    <string name="register_btn">register</string>
    <string name="announce_manage_btn">Announcement manage</string>
    <string name="username_input_hint">username</string>
    <string name="username_input_login_hint">username or telephone</string>
    <string name="password_input_hint">password</string>
    <string name="phone_input_hint">Phone number</string>
    <string name="realName_input_hint">Real name</string>
    <string name="description_input_hint">Description</string>
    <string name="new_password_input_hint">New password</string>
    <string name="remember_login_hint">Remember me</string>
    <string name="verifyCode_input_hint">VerifyCode</string>
    <string name="role_user">User</string>
    <string name="role_admin">Admin</string>
    <string name="order_name_hint">Order name</string>
    <string name="order_money_hint">Order money</string>
    <string name="order_paid_hint">Already paid</string>
    <string name="order_send_hint">Send to:</string>
    <string name="order_start_hint">Order start date:</string>
    <string name="order_end_hint">Order end date:</string>
    <string name="order_place_hint">Order place</string>
    <string name="order_place_detail_hint">Order place details</string>
    <string name="order_phone_hint">Customer phone number</string>
    <string name="no_login_hint">You should log in first</string>
    <string name="order_name_detail">Order name:</string>
    <string name="order_money_detail">Order money:</string>
    <string name="order_paid_detail">Order paid:</string>
    <string name="order_place_detail">Order place:</string>
    <string name="order_phone_detail">Customer phone:</string>
    <string name="order_start_detail">Start time:</string>
    <string name="order_end_detail">End time:</string>
    <string name="order_status_detail">Status:</string>
    <string name="order_from_detail">Order From:</string>
    <string name="announce_info_detail">Info:</string>
    <string name="user_info_fullname">Fullname:</string>
    <string name="user_info_telephone">Telephone:</string>
    <string name="user_info_money">Money:</string>
    <string name="user_info_role_user">User</string>
    <string name="user_info_role_admin">admin</string>
    <string name="user_info_get_error_hint">Get details error, click to refresh</string>
    <string name="user_logout_hint">You already logout</string>
    <string name="user_permission_hint">You are not admin</string>
    <string name="status_available">available</string>
    <string name="status_accept">accepted</string>
    <string name="status_work">on work</string>
    <string name="status_refuse">refused</string>
    <string name="status_done">done</string>
    <string name="status_outOfDate">(Out of date)</string>
    <string name="chose_date_error">You must chose date and time first</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_Home">Home</string>
    <string name="new_order_notification">You have new order(s) to apply</string>
    <string name="city_choser_title">Chose place</string>

    <string name="title_activity_user_settings">UserSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>