<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".findPasswordActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ET_username_findPass"
        android:inputType="text"
        android:hint="@string/username_input_login_hint"
        android:maxLength="25"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ET_password_findPass"
        android:maxLength="45"
        android:inputType="textPassword"
        android:hint="@string/new_password_input_hint"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_btn"
        android:id="@+id/BT_changePass_findPass"/>




</LinearLayout>